--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -1,79 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+        <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Omelette Recipe</title>
+    <meta name="description" content="A simple and delicious omelette recipe that combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.">
+    <meta name="keywords" content="omelette, eggs, breakfast, brunch, recipe, cooking, food">    
+    <title>Simple Omelette Recipe</title>    
+    <link rel="stylesheet" href="normalize.css">    
+    <link rel="icon" href="/assets/images/favicon-32x32.png" type="image/x-icon">    
+    <link rel="stylesheet" href="style.css">    
 </head>
 <body>
-    <main>
-        <article>
-            <section> 
-                <figure>
-                    <img src="#" alt="A cooked omelette with spinach and dill on a plate">
-                </figure>
-                <h1>Simple Omelette Recipe</h1>
-                <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
-            </section>
-            
-            <section>
-                <h2>Preparation time</h2>
-                <ul>
-                    <li><b>Total:</b> Approximately 10 minutes</li>
-                    <li><b>Preparation:</b> 5 minutes</li>
-                    <li><b>Cooking:</b> 5 minutes</li>
-                </ul>
-            </section>
-            
-            <section>
-                <h2>Ingredients</h2>
-                <ul>
-                    <li>2-3 large eggs</li>
-                    <li>Salt, to taste</li>
-                    <li>Pepper, to taste</li>
-                    <li>1 tablespoon of butter or oil</li>
-                    <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+    <main class="recipe">
+        <figure class="recipe__image-container">
+            <img src="/assets/images/image-omelette.jpeg" alt="A simple and delicious omelette" class="recipe__image"> 
+        </figure>
+
+        <article class="recipe__content">
+            <h1 class="recipe__title">Simple Omelette Recipe</h1>
+            <p class="recipe__description">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+
+            <section class="recipe__prep-time">
+                <h2 class="recipe__section-title recipe__section-title--visually-hidden">Preparation time</h2> <!-- Hidden visually, but present for screen readers -->
+                <ul class="recipe__prep-time-list">
+                    <li class="recipe__prep-time-item">
+                        <span class="recipe__prep-time-label">Total:</span>
+                        <span class="recipe__prep-time-value">Approximately 10 minutes</span>
+                    </li>
+                    <li class="recipe__prep-time-item">
+                        <span class="recipe__prep-time-label">Preparation:</span>
+                        <span class="recipe__prep-time-value">5 minutes</span>
+                    </li>
+                    <li class="recipe__prep-time-item">
+                        <span class="recipe__prep-time-label">Cooking:</span>
+                        <span class="recipe__prep-time-value">5 minutes</span>
+                    </li>
                 </ul>
             </section>
 
-            <section>
-                <h2>Instructions</h2>
-                <ol>
-                    <li><b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
-                    <li><b>Heat the pan:</b> Place a non-stick frying pan over medium heat and add butter or oil.</li>
-                    <li><b>Cook the omelette:</b> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
-                    <li><b>Add fillings (optional):</b> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
-                    <li><b>Fold and serve:</b> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
-                    <li><b>Enjoy:</b> Serve hot, with additional salt and pepper if needed.</li>
+            <section class="recipe__ingredients">
+                <h2 class="recipe__section-title">Ingredients</h2>
+                <ul class="recipe__ingredients-list">
+                    <li class="recipe__ingredients-item">2-3 large eggs</li>
+                    <li class="recipe__ingredients-item">Salt, to taste</li>
+                    <li class="recipe__ingredients-item">Pepper, to taste</li>
+                    <li class="recipe__ingredients-item">1 teaspoon of butter or oil</li>
+                    <li class="recipe__ingredients-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+                </ul>
+            </section>
+
+            <section class="recipe__instructions">
+                <h2 class="recipe__section-title">Instructions</h2>
+                <ol class="recipe__instructions-list">
+                    <li class="recipe__instructions-step">
+                        <span class="recipe__instructions-step-number">1.</span>
+                        <span class="recipe__instructions-step-text">
+                            <strong class="recipe__instructions-step-action">Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well combined. You can add a tablespoon of water or milk for a fluffier texture.
+                        </span>
+                    </li>
+                    <li class="recipe__instructions-step">
+                        <span class="recipe__instructions-step-number">2.</span>
+                        <span class="recipe__instructions-step-text">
+                            <strong class="recipe__instructions-step-action">Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.
+                        </span>
+                    </li>
+                    <li class="recipe__instructions-step">
+                        <span class="recipe__instructions-step-number">3.</span>
+                        <span class="recipe__instructions-step-text">
+                           <strong class="recipe__instructions-step-action">Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.
+                        </span>
+                    </li>
+                    <li class="recipe__instructions-step">
+                        <span class="recipe__instructions-step-number">4.</span>
+                        <span class="recipe__instructions-step-text">
+                            <strong class="recipe__instructions-step-action">Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.
+                        </span>
+                    </li>
+                    <li class="recipe__instructions-step">
+                        <span class="recipe__instructions-step-number">5.</span>
+                        <span class="recipe__instructions-step-text">
+                            <strong class="recipe__instructions-step-action">Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.
+                        </span>
+                    </li>
+                    <li class="recipe__instructions-step">
+                        <span class="recipe__instructions-step-number">6.</span>
+                        <span class="recipe__instructions-step-text">
+                            <strong class="recipe__instructions-step-action">Enjoy:</strong> Serve hot, with additional salt and pepper if needed.
+                        </span>
+                    </li>
                 </ol>
             </section>
 
-            <section>
-                <h2>Nutrition</h2>
-                <p>The table below shows nutritional values per serving without the additional fillings.</p>
-                <table>
-                    <thead>
-                        <tr>
-                            <th></th>
-                            <th></th>
+            <section class="recipe__nutrition">
+                <h2 class="recipe__section-title">Nutrition</h2>
+                <p class="recipe__nutrition-info">The table below shows nutritional values per serving without the additional fillings.</p>
+                <table class="recipe__nutrition-table">
+                    <tbody class="recipe__nutrition-table-body">
+                        <tr class="recipe__nutrition-table-row">
+                            <th scope="row" class="recipe__nutrition-table-header">Calories</th>
+                            <td class="recipe__nutrition-table-data">277kcal</td>
                         </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Calories</td>
-                            <td>277kcal</td>
+                        <tr class="recipe__nutrition-table-row">
+                            <th scope="row" class="recipe__nutrition-table-header">Carbs</th>
+                            <td class="recipe__nutrition-table-data">0g</td>
                         </tr>
-                        <tr>
-                            <td>Carbs</td>
-                            <td>0g</td>
+                        <tr class="recipe__nutrition-table-row">
+                            <th scope="row" class="recipe__nutrition-table-header">Protein</th>
+                            <td class="recipe__nutrition-table-data">20g</td>
                         </tr>
-                        <tr>
-                            <td>Protein</td>
-                            <td>20g</td>
-                        </tr>
-                        <tr>
-                            <td>Fat</td>
-                            <td>22g</td>
+                        <tr class="recipe__nutrition-table-row">
+                            <th scope="row" class="recipe__nutrition-table-header">Fat</th>
+                            <td class="recipe__nutrition-table-data">22g</td>
                         </tr>
                     </tbody>
                 </table>
