--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -8,110 +8,109 @@
     <meta property="og:description" content="A simple and delicious omelette recipe that combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.">
     <meta property="og:image" content="/assets/images/image-omelette.jpeg">
     <meta property="og:url" content="[URL of your recipe page]">
-    <title>Simple Omelette Recipe</title>
-    <link rel="stylesheet" href="normalize.css">
+    <title>Simple Omelette Recipe</title> 
     <link rel="icon" href="/assets/images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header class="recipe__header">
-      </header>
+<body>    
     <main class="recipe">
+        
         <article class="recipe__card">
             <picture>                
                 <img src="/assets/images/image-omelette.jpeg" alt="Simple Omelette with spinach, onions, and dill on a white plate" class="recipe__image">
-            </picture>
-            
-            <h1 class="recipe__title">Simple Omelette Recipe</h1>
-            <p class="recipe__description">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+            </picture>       
+            <section class="recipe__info">
+                <section class="recipe__content">
+                <h1>Simple Omelette Recipe</h1>
+                <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+                </section>
 
-            <section class="recipe__prep-time">
-                <h2 class="recipe__section-title">Preparation time</h2>
-                <ul class="recipe__prep-time-list">
-                    <li class="recipe__prep-time-item">
-                        <strong>Total:</strong> Approximately 10 minutes
-                    </li>
-                    <li class="recipe__prep-time-item">
-                        <strong>Preparation:</strong> 5 minutes
-                    </li>
-                    <li class="recipe__prep-time-item">
-                        <strong>Cooking:</strong> 5 minutes
-                    </li>
-                </ul>
-            </section>
+                <section class="recipe__prep-time">
+                    <h2 class="recipe__section-title">Preparation time</h2>
+                    <ul class="recipe__prep-time-list">
+                        <li class="recipe__prep-time-item">
+                            <strong>Total:</strong> Approximately 10 minutes
+                        </li>
+                        <li class="recipe__prep-time-item">
+                            <strong>Preparation:</strong> 5 minutes
+                        </li>
+                        <li class="recipe__prep-time-item">
+                            <strong>Cooking:</strong> 5 minutes
+                        </li>
+                    </ul>
+                </section>
 
-            <section class="recipe__ingredients">
-                <h2 class="recipe__section-title">Ingredients</h2>
-                <ul class="recipe__ingredients-list">
-                    <li class="recipe__ingredients-item">2-3 large eggs</li>
-                    <li class="recipe__ingredients-item">Salt, to taste</li>
-                    <li class="recipe__ingredients-item">Pepper, to taste</li>
-                    <li class="recipe__ingredients-item">1 teaspoon of butter or oil</li>
-                    <li class="recipe__ingredients-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-                </ul>
-            </section>
+                <section class="recipe__ingredients">
+                    <h2 class="recipe__section-title">Ingredients</h2>
+                    <ul class="recipe__ingredients-list">
+                        <li class="recipe__ingredients-item">2-3 large eggs</li>
+                        <li class="recipe__ingredients-item">Salt, to taste</li>
+                        <li class="recipe__ingredients-item">Pepper, to taste</li>
+                        <li class="recipe__ingredients-item">1 teaspoon of butter or oil</li>
+                        <li class="recipe__ingredients-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+                    </ul>
+                </section>
 
-            <hr class="recipe__divider">
+                <hr class="recipe__divider">
 
-            <section class="recipe__instructions">
-                <h2 class="recipe__section-title">Instructions</h2>
-                <ol class="recipe__instructions-list">
-                    <li class="recipe__instructions-item">
-                        <strong class="recipe__instructions-step-action">Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well combined. You can add a tablespoon of water or milk for a fluffier texture.
-                    </li>
-                    <li class="recipe__instructions-item">
-                        <strong class="recipe__instructions-step-action">Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.
-                    </li>
-                    <li class="recipe__instructions-item">
-                       <strong class="recipe__instructions-step-action">Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.
-                    </li>
-                    <li class="recipe__instructions-item">
-                        <strong class="recipe__instructions-step-action">Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.
-                    </li>
-                    <li class="recipe__instructions-item">
-                        <strong class="recipe__instructions-step-action">Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.
-                    </li>
-                    <li class="recipe__instructions-item">
-                        <strong class="recipe__instructions-step-action">Enjoy:</strong> Serve hot, with additional salt and pepper if needed.
-                    </li>
-                </ol>
-            </section>
+                <section class="recipe__instructions">
+                    <h2 class="recipe__section-title">Instructions</h2>
+                    <ol class="recipe__instructions-list">
+                        <li class="recipe__instructions-item">
+                            <strong class="recipe__instructions-step-action">Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well combined. You can add a tablespoon of water or milk for a fluffier texture.
+                        </li>
+                        <li class="recipe__instructions-item">
+                            <strong class="recipe__instructions-step-action">Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.
+                        </li>
+                        <li class="recipe__instructions-item">
+                        <strong class="recipe__instructions-step-action">Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.
+                        </li>
+                        <li class="recipe__instructions-item">
+                            <strong class="recipe__instructions-step-action">Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.
+                        </li>
+                        <li class="recipe__instructions-item">
+                            <strong class="recipe__instructions-step-action">Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.
+                        </li>
+                        <li class="recipe__instructions-item">
+                            <strong class="recipe__instructions-step-action">Enjoy:</strong> Serve hot, with additional salt and pepper if needed.
+                        </li>
+                    </ol>
+                </section>
 
-            <hr class="recipe__divider">
+                <hr class="recipe__divider">
 
-            <section class="recipe__nutrition">
-                <h2 class="recipe__section-title">Nutrition</h2>
-                <p class="recipe__nutrition-info">The table below shows nutritional values per serving without the additional fillings.</p>
-                <table class="recipe__nutrition-table">
-                    <thead>
-                        <tr>
-                            <th scope="col" class="recipe__nutrition-header"> </th>
-                            <th scope="col" class="recipe__nutrition-header"> </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr class="recipe__nutrition-row">
-                            <th scope="row" class="recipe__nutrition-header">Calories</th>
-                            <td class="recipe__nutrition-data">277kcal</td>
-                        </tr>
-                        <tr class="recipe__nutrition-row">
-                            <th scope="row" class="recipe__nutrition-header">Carbs</th>
-                            <td class="recipe__nutrition-data">0g</td>
-                        </tr>
-                        <tr class="recipe__nutrition-row">
-                            <th scope="row" class="recipe__nutrition-header">Protein</th>
-                            <td class="recipe__nutrition-data">20g</td>
-                        </tr>
-                        <tr class="recipe__nutrition-row">
-                            <th scope="row" class="recipe__nutrition-header">Fat</th>
-                            <td class="recipe__nutrition-data">22g</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <section class="recipe__nutrition">
+                    <h2 class="recipe__section-title">Nutrition</h2>
+                    <p class="recipe__nutrition-info">The table below shows nutritional values per serving without the additional fillings.</p>
+                    <table class="recipe__nutrition-table">
+                        <thead>
+                            <tr>
+                                <th scope="col" class="recipe__nutrition-header"> </th>
+                                <th scope="col" class="recipe__nutrition-header"> </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="recipe__nutrition-row">
+                                <th scope="row" class="recipe__nutrition-header">Calories</th>
+                                <td class="recipe__nutrition-data">277kcal</td>
+                            </tr>
+                            <tr class="recipe__nutrition-row">
+                                <th scope="row" class="recipe__nutrition-header">Carbs</th>
+                                <td class="recipe__nutrition-data">0g</td>
+                            </tr>
+                            <tr class="recipe__nutrition-row">
+                                <th scope="row" class="recipe__nutrition-header">Protein</th>
+                                <td class="recipe__nutrition-data">20g</td>
+                            </tr>
+                            <tr class="recipe__nutrition-row">
+                                <th scope="row" class="recipe__nutrition-header">Fat</th>
+                                <td class="recipe__nutrition-data">22g</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </section>
             </section>
         </article>
-    </main>
-    <footer class="recipe__footer">
-    </footer>
+    </main>    
 </body>
 </html>
