--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -41,37 +41,37 @@
                 </ul>
             </section>
             <section class="recipe__ingredients">
-                <h2 class="recipe__section-title">Ingredients</h2>
-                <ul class="recipe__ingredients-list">
-                    <li class="recipe__ingredients-item">2-3 large eggs</li>
-                    <li class="recipe__ingredients-item">Salt, to taste</li>
-                    <li class="recipe__ingredients-item">Pepper, to taste</li>
-                    <li class="recipe__ingredients-item">1 teaspoon of butter or oil</li>
-                    <li class="recipe__ingredients-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+                <h2>Ingredients</h2>
+                <ul>
+                    <li>2-3 large eggs</li>
+                    <li>Salt, to taste</li>
+                    <li>Pepper, to taste</li>
+                    <li>1 teaspoon of butter or oil</li>
+                    <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
                 </ul>
             </section>
             <hr class="recipe__divider">
 
             <section class="recipe__instructions">
-                <h2 class="recipe__section-title">Instructions</h2>
-                <ol class="recipe__instructions-list">
-                    <li class="recipe__instructions-item">
-                        <strong class="recipe__instructions-step-action">Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well combined. You can add a tablespoon of water or milk for a fluffier texture.
+                <h2>Instructions</h2>
+                <ol>
+                    <li >
+                        <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well combined. You can add a tablespoon of water or milk for a fluffier texture.
                     </li>
-                    <li class="recipe__instructions-item">
-                        <strong class="recipe__instructions-step-action">Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.
+                    <li >
+                        <strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.
                     </li>
-                    <li class="recipe__instructions-item">
-                       <strong class="recipe__instructions-step-action">Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.
+                    <li >
+                    <strong >Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.
                     </li>
-                    <li class="recipe__instructions-item">
-                        <strong class="recipe__instructions-step-action">Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.
+                    <li>
+                        <strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.
                     </li>
-                    <li class="recipe__instructions-item">
-                        <strong class="recipe__instructions-step-action">Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.
+                    <li>
+                        <strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.
                     </li>
-                    <li class="recipe__instructions-item">
-                        <strong class="recipe__instructions-step-action">Enjoy:</strong> Serve hot, with additional salt and pepper if needed.
+                    <li>
+                        <strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.
                     </li>
                 </ol>
             </section>
@@ -79,31 +79,31 @@
             <hr class="recipe__divider">
 
             <section class="recipe__nutrition">
-                <h2 class="recipe__section-title">Nutrition</h2>
-                <p class="recipe__nutrition-info">The table below shows nutritional values per serving without the additional fillings.</p>
-                <table class="recipe__nutrition-table">
+                <h2>Nutrition</h2>
+                <p>The table below shows nutritional values per serving without the additional fillings.</p>
+                <table>
                     <thead>
                         <tr>
-                            <th scope="col" class="recipe__nutrition-header"> </th>
-                            <th scope="col" class="recipe__nutrition-header"> </th>
+                            <th> </th>
+                            <th> </th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="recipe__nutrition-row">
-                            <th scope="row" class="recipe__nutrition-header">Calories</th>
-                            <td class="recipe__nutrition-data">277kcal</td>
+                        <tr>
+                            <th>Calories</th>
+                            <td>277kcal</td>
                         </tr>
-                        <tr class="recipe__nutrition-row">
-                            <th scope="row" class="recipe__nutrition-header">Carbs</th>
-                            <td class="recipe__nutrition-data">0g</td>
+                        <tr>
+                            <th>Carbs</th>
+                            <td>0g</td>
                         </tr>
-                        <tr class="recipe__nutrition-row">
-                            <th scope="row" class="recipe__nutrition-header">Protein</th>
-                            <td class="recipe__nutrition-data">20g</td>
+                        <tr>
+                            <th>Protein</th>
+                            <td>20g</td>
                         </tr>
-                        <tr class="recipe__nutrition-row">
-                            <th scope="row" class="recipe__nutrition-header">Fat</th>
-                            <td class="recipe__nutrition-data">22g</td>
+                        <tr>
+                            <th>Fat</th>
+                            <td>22g</td>
                         </tr>
                     </tbody>
                 </table>
