--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="AI-powered project delivery tools featuring team building, supervision, calculations, and quality assurance">
+    <link rel="icon" href="./images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/tokens.css">
     <link rel="stylesheet" href="./css/style.css">
