--- a/meet-landing-page/index.html
+++ b/meet-landing-page/index.html
@@ -12,10 +12,11 @@
   <title>Frontend Mentor | Meet landing page</title>
 </head>
 <body>
-  <header>
-    <img src="./assets/logo.svg" alt="Meet logo">
-  </header>
   <main>
+    <nav>
+      <img src="./assets/logo.svg" alt="Meet logo">
+    </nav>
+
     <section class="hero">
       <img src="./assets/desktop/image-hero-left.png" alt="" class="hero__image-left">
       <div class="hero__content">
@@ -29,21 +30,23 @@
       <img src="./assets/desktop/image-hero-right.png" alt="" class="hero__image-right">
     </section>
 
-    <div class="images-grid">
-      <img src="./assets/desktop/image-woman-in-videocall.jpg" alt="Woman in videocall">
-      <img src="./assets/desktop/image-women-videochatting.jpg" alt="Women videochatting">
-      <img src="./assets/desktop/image-men-in-meeting.jpg" alt="Men in meeting">
-      <img src="./assets/desktop/image-man-texting.jpg" alt="Man texting">
-    </div>
+    <section class="main-content">
+      <div class="images-grid">
+        <img src="./assets/desktop/image-woman-in-videocall.jpg" alt="Woman in videocall">
+        <img src="./assets/desktop/image-women-videochatting.jpg" alt="Women videochatting">
+        <img src="./assets/desktop/image-men-in-meeting.jpg" alt="Men in meeting">
+        <img src="./assets/desktop/image-man-texting.jpg" alt="Man texting">
+      </div>
 
-    <section>
-      <h2>01</h2>
-      <h3>Built for modern use</h3>
-      <p>Smarter meetings, all in one place</p>
-      <p>Send messages, share files, show your screen, and record your meetings — all in one workspace. Control who can join with invite-only team access, data encryption, and data export.</p>
+      <div class="content">
+        <h2>01</h2>
+        <h3>Built for modern use</h3>
+        <p>Smarter meetings, all in one place</p>
+        <p>Send messages, share files, show your screen, and record your meetings — all in one workspace. Control who can join with invite-only team access, data encryption, and data export.</p>
+      </div>
     </section>
 
-    <section class="footer">
+    <footer class="footer">
       <h2>02</h2>
       <div class="footer__content">
         <h3>Experience more together</h3>
@@ -52,7 +55,7 @@
           <button>Download <span>v1.3</span></button>
         </div>
       </div>
-    </section>
+    </footer>
   </main>
 </body>
 </html>
