--- a/meet-landing-page/index.html
+++ b/meet-landing-page/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/tokens.css">
   <title>Frontend Mentor | Meet landing page</title>
 </head>
 <body>
