--- a/meet-landing-page/index.html
+++ b/meet-landing-page/index.html
@@ -22,17 +22,17 @@
     <main>
         <section class="hero">
             <div class="container">
-                <div class="hero__images">
+                <div class="hero__grid">
                     <img src="./assets/desktop/image-hero-left.png" alt="Hero Image Left" width="300" height="250" class="hero__image hero__image--left">
-                    <img src="./assets/desktop/image-hero-right.png" alt="Hero Image Right" width="320" height="270" class="hero__image hero__image--right">
-                </div>
-                <div class="hero__content">
-                    <h1 class="hero__title">Group Chat for Everyone</h1>
-                    <p class="hero__description">Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
-                    <div class="button-group">
-                        <a href="#" class="button button--primary">Download <span class="button__version">v1.3</span></a>
-                        <a href="#" class="button button--secondary">What is it?</a>
+                    <div class="hero__content">
+                        <h1 class="hero__title">Group Chat for Everyone</h1>
+                        <p class="hero__description">Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
+                        <div class="button-group">
+                            <a href="#" class="button button--primary">Download <span class="button__version">v1.3</span></a>
+                            <a href="#" class="button button--secondary">What is it?</a>
+                        </div>
                     </div>
+                    <img src="./assets/desktop/image-hero-right.png" alt="Hero Image Right" width="320" height="270" class="hero__image hero__image--right">
                 </div>
             </div>
             <div class="section-separator">
